dock z-index corrected for smaller resolutions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,7 +91,7 @@ ul.osx-dock li.nearby a {
  
 ul.osx-dock { display: inline-block; height: 130px; padding: 0 40px 0 0; background: url(../img/dock-background-left.png) no-repeat right bottom; margin: 0 0 0 40px; }
 
-#dockContainer { position: fixed; bottom: 12px; height: 120px; padding: 50px 0 0; text-align: center; -webkit-border-radius: 6px; -moz-border-radius: 6px; width: 100%; line-height: 1; z-index: 100; }
+#dockContainer { position: fixed; bottom: 12px; height: 120px; padding: 50px 0 0; text-align: center; -webkit-border-radius: 6px; -moz-border-radius: 6px; width: 100%; line-height: 1; z-index: 1000; }
 
 div#dockWrapper { width: auto; display: inline-block; position: relative; border-bottom: solid 2px rgba(255,255,255,.35); line-height: 0; }
 
